# cw_bw

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
apps/: bwgen.cpp
configs/: default.yaml  default_badboost.yaml  no_v2.yaml
include/: AnalyzerCVE.h  AnalyzerRawOutput.h  AnalyzerV0.h  Config.h  EventFactory.h  EventParticle.h
refdata/: HEPData-ins1243863-v1-root.root  HEPData-ins1297103-v1-root.root  HEPData-ins1759506-v1-root.root  cve_alice_preliminary.csv
scripts/BlastWaveFitter/: BlastWaveFitResults_old.csv  BlastWaveFitter.C  README.md  extract.py  integrateSpectra.C  old_vofit.C  run_batch.C  run_st2_sb2.C  run_v0fit.C  run_v0pT_mass.C  run_v0pT_rho2.C  test_rum.C
scripts/BlastWaveFitter/old_pdf/: BlastWaveFitResults.csv
scripts/FittedData/: Draw_diff.C  compare_model_alice_pre.py  draw_diff.py  run_parallel.py
scripts/PrepareDataForBWFitter/: graph_mapping.csv  interpolation_specLambda_root.py  spec_to_dist.py
scripts/Rho2Rho0/: scan_rho2_rho0.py
scripts/Rho2Rho0ScanData/: analysis.py  draw.py  scan_pars.py
scripts/ScanData/: compare_model_alice_pre.py  run_banch.py
scripts/ScanPars/: analysis.py  draw.py  draw_v2_betaT.py  scan_betascale.csv  scan_fLBC.csv  scan_pars.py  scan_rho2scale.csv  test_color.py
scripts/ScanPars/scan_betascale/: draw_v2_betaT.py
scripts/prepareData/: PrepareLambdaSpectra.C  build_specLambda_root.py
src/: AnalyzerCVE.cxx  AnalyzerRawOutput.cxx  AnalyzerV0.cxx  Config.cxx  EventFactory.cxx
